--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="crossorigin="anonymous"></script>
     <title>BoozApp!</title>
   </head>
@@ -41,10 +42,10 @@
            <input class="input-field" id="ricerca" type="text" placeholder="Cerca o inizia una nuova chat">
          </div>
          <!-- CONTACTS -->
-         <div class="contatti ">
+         <div class="contatti " id="contacts_my">
            <ul>
              <!-- 1st contact -->
-             <li class="item-contatti border-bottom">
+             <li class="item-contatti border-bottom" data-conversazione ="0">
                <div class="avatar">
                  <img src="img/avatar_1.jpg" alt="avatar">
                </div>
@@ -59,7 +60,7 @@
                </div>
              </li>
              <!-- 2nd contact -->
-             <li class="item-contatti border-bottom">
+             <li class="item-contatti border-bottom" data-conversazione ="1">
                <div class="avatar">
                  <img src="img/avatar_2.jpg" alt="avatar">
                </div>
@@ -74,7 +75,7 @@
                </div>
              </li>
              <!-- 3rd contact -->
-             <li class="item-contatti border-bottom">
+             <li class="item-contatti border-bottom" data-conversazione ="2">
                <div class="avatar">
                  <img src="img/avatar_3.jpg" alt="avatar">
                </div>
@@ -89,7 +90,7 @@
                </div>
              </li>
              <!-- 4th contact -->
-             <li class="item-contatti border-bottom">
+             <li class="item-contatti border-bottom" data-conversazione ="3">
                <div class="avatar">
                  <img src="img/avatar_4.jpg" alt="avatar">
                </div>
@@ -104,7 +105,7 @@
                </div>
              </li>
              <!-- 5th contact -->
-             <li class="item-contatti border-bottom">
+             <li class="item-contatti border-bottom" data-conversazione ="4">
                <div class="avatar">
                  <img src="img/avatar_5.jpg" alt="avatar">
                </div>
@@ -119,7 +120,7 @@
                </div>
              </li>
              <!-- 6th contact -->
-             <li class="item-contatti border-bottom">
+             <li class="item-contatti border-bottom" data-conversazione ="5">
                <div class="avatar">
                  <img src="img/avatar_6.jpg" alt="avatar">
                </div>
@@ -134,7 +135,7 @@
                </div>
              </li>
              <!-- 7th contact -->
-             <li class="item-contatti border-bottom">
+             <li class="item-contatti border-bottom" data-conversazione ="6">
                <div class="avatar">
                  <img src="img/avatar_7.jpg" alt="avatar">
                </div>
@@ -149,7 +150,7 @@
                </div>
              </li>
              <!-- 8th contact -->
-             <li class="item-contatti border-bottom">
+             <li class="item-contatti border-bottom" data-conversazione ="7">
                <div class="avatar">
                  <img src="img/avatar_8.jpg" alt="avatar">
                </div>
@@ -186,25 +187,29 @@
              <a href="#"><i class="fas fa-ellipsis-v"></i></a>
            </div>
          </div>
-         <div class="chat ">
+         <div class="chat " data-contact="0">
            <div class="wrapper">
              <div class="green_message">
                <span>Ciao!</span>
                <span class="time">05:37</span>
-               <i class="fa fa-chevron-down f-right message-options"></i>
-                 <div class="elimina-messaggio">
-                   <span class="point">Message Info</span>
-                   <span class="message-delete point">Delete message</span>
-                 </div>
+               <small class="destroyer">
+                 <i class="fa fa-chevron-down f-right message-options"></i>
+                   <div class="elimina-messaggio">
+                     <span class="point">Message Info</span>
+                     <span class="message-delete point">Delete message</span>
+                   </div>
+               </small>
              </div>
              <div class="white_message">
                <span>Ciao!</span>
                <span class="time">05:37</span>
-               <i class="fa fa-chevron-down f-right message-options"></i>
-                 <div class="elimina-messaggio">
-                   <span class="point">Message Info</span>
-                   <span class="message-delete point">Delete message</span>
-             </div>
+               <small class="destroyer">
+                 <i class="fa fa-chevron-down f-right message-options"></i>
+                   <div class="elimina-messaggio">
+                     <span class="point">Message Info</span>
+                     <span class="message-delete point">Delete message</span>
+                   </div>
+               </small>
            </div>
          </div>
          <div class="bottom">
@@ -218,11 +223,19 @@
     <div class="new_text">
       <div class="green_message hide">
         <span class="myText"></span>
-        <span class="time"></span>
+        <span class="time"><span id="datetime"></span></span>
+        <i class="fa fa-chevron-down f-right message-options"></i>
+          <div class="elimina-messaggio">
+            <span class="point">Message Info</span>
+            <span class="message-delete point">Delete message</span>
       </div>
       <div class="white_message hide">
         <span class="otherText"></span>
-        <span class="time"></span>
+        <span class="time"><span id="datetimewhite"></span></span>
+        <i class="fa fa-chevron-down f-right message-options"></i>
+          <div class="elimina-messaggio">
+            <span class="point">Message Info</span>
+            <span class="message-delete point">Delete message</span>
       </div>
     </div>
     <script type="text/javascript" src="js/myjs.js"></script>
