inserimento nuova funzione

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
            </div>
            <!-- ICONS + EXTRA LIGHT AND DARK MODE -->
            <div class="icon">
-             <a href="#"><i class="far fa-lightbulb lightmode"></i></i></a>
-             <a href="#"><i class="far fa-moon darksun"></i></i></a>
+             <a href="#"><i class="far fa-lightbulb lightmode"> Light</i></i></a>
+             <a href="#"><i class="far fa-moon darksun"> Dark</i></i></a>
              <a href="#"><i class="fas fa-circle-notch"></i></a>
              <a href="#"><i class="fas fa-comment-alt"></i></a>
              <a href="#"><i class="fas fa-ellipsis-v"></i></a>
@@ -37,15 +37,15 @@
            </div>
          </div>
          <!-- SEARCHING CONTACT -->
-         <div class="searching_bar">
+         <div class="searching_bar ricerca">
            <i class="fas fa-search"></i>
-           <input class="input-field" id="ricerca" type="text" placeholder="Cerca o inizia una nuova chat">
+           <input type="text" placeholder="Cerca o inizia una nuova chat">
          </div>
          <!-- CONTACTS -->
          <div class="contatti " id="contacts_my">
            <ul>
              <!-- 1st contact -->
-             <li class="item-contatti border-bottom" data-conversazione ="0">
+             <li class="item-contatti border-bottom" data-conversazione ="0" name="LEMMY">
                <div class="avatar">
                  <img src="img/avatar_1.jpg" alt="avatar">
                </div>
@@ -60,7 +60,7 @@
                </div>
              </li>
              <!-- 2nd contact -->
-             <li class="item-contatti border-bottom" data-conversazione ="1">
+             <li class="item-contatti border-bottom" data-conversazione ="1" name="JIMI">
                <div class="avatar">
                  <img src="img/avatar_2.jpg" alt="avatar">
                </div>
@@ -75,7 +75,7 @@
                </div>
              </li>
              <!-- 3rd contact -->
-             <li class="item-contatti border-bottom" data-conversazione ="2">
+             <li class="item-contatti border-bottom" data-conversazione ="2" name="PHIL">
                <div class="avatar">
                  <img src="img/avatar_3.jpg" alt="avatar">
                </div>
@@ -90,7 +90,7 @@
                </div>
              </li>
              <!-- 4th contact -->
-             <li class="item-contatti border-bottom" data-conversazione ="3">
+             <li class="item-contatti border-bottom" data-conversazione ="3" name="WAYNE">
                <div class="avatar">
                  <img src="img/avatar_4.jpg" alt="avatar">
                </div>
@@ -105,7 +105,7 @@
                </div>
              </li>
              <!-- 5th contact -->
-             <li class="item-contatti border-bottom" data-conversazione ="4">
+             <li class="item-contatti border-bottom" data-conversazione ="4" name="ROGER">
                <div class="avatar">
                  <img src="img/avatar_5.jpg" alt="avatar">
                </div>
@@ -120,7 +120,7 @@
                </div>
              </li>
              <!-- 6th contact -->
-             <li class="item-contatti border-bottom" data-conversazione ="5">
+             <li class="item-contatti border-bottom" data-conversazione ="5" name="JIM">
                <div class="avatar">
                  <img src="img/avatar_6.jpg" alt="avatar">
                </div>
@@ -135,7 +135,7 @@
                </div>
              </li>
              <!-- 7th contact -->
-             <li class="item-contatti border-bottom" data-conversazione ="6">
+             <li class="item-contatti border-bottom" data-conversazione ="6" name="COREY">
                <div class="avatar">
                  <img src="img/avatar_7.jpg" alt="avatar">
                </div>
@@ -150,7 +150,7 @@
                </div>
              </li>
              <!-- 8th contact -->
-             <li class="item-contatti border-bottom" data-conversazione ="7">
+             <li class="item-contatti border-bottom" data-conversazione ="7" name=JOHN>
                <div class="avatar">
                  <img src="img/avatar_8.jpg" alt="avatar">
                </div>
@@ -213,7 +213,7 @@
            </div>
          </div>
          <div class="bottom">
-           <div class="icon"><i class="far fa-smile"></i></div>
+           <div class="icon"><i class="far fa-smile pointer"></i></div>
            <input type="text" placeholder="Scrivi un messaggio">
            <div class="icon"><i class="fas fa-paper-plane pointer"></i></div>
          </div>
