cambio intestazione utente al cambio chat

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
      </div>
      <!-- RIGHT SIDE  -->
      <div id="right">
-       <div class="top">
+       <div class="top pop visible" data-contact="0">
          <div class="avatar">
            <img src="img/avatar_1.jpg" alt="avatar">
          </div>
@@ -179,6 +179,132 @@
            </div>
            <div class="status">
              <p>Ultimo accesso oggi alle 05:37</p>
+           </div>
+         </div>
+         <div class="icon">
+           <a href="#"><i class="fas fa-search"></i></a>
+           <a href="#"><i class="fas fa-paperclip"></i></a>
+           <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+         </div>
+       </div>
+       <div class="top pop hidden" data-contact="1">
+         <div class="avatar">
+           <img src="img/avatar_2.jpg" alt="avatar">
+         </div>
+         <div class="info">
+           <div class="nome">
+             <p class="strong">Jimi Hendrix</p>
+           </div>
+           <div class="status">
+             <p>Ultimo accesso oggi alle 18:09</p>
+           </div>
+         </div>
+         <div class="icon">
+           <a href="#"><i class="fas fa-search"></i></a>
+           <a href="#"><i class="fas fa-paperclip"></i></a>
+           <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+         </div>
+       </div>
+       <div class="top pop hidden" data-contact="2">
+         <div class="avatar">
+           <img src="img/avatar_3.jpg" alt="avatar">
+         </div>
+         <div class="info">
+           <div class="nome">
+             <p class="strong">Phil Anselmo</p>
+           </div>
+           <div class="status">
+             <p>Ultimo accesso oggi alle 17:54</p>
+           </div>
+         </div>
+         <div class="icon">
+           <a href="#"><i class="fas fa-search"></i></a>
+           <a href="#"><i class="fas fa-paperclip"></i></a>
+           <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+         </div>
+       </div>
+       <div class="top pop hidden" data-contact="3">
+         <div class="avatar">
+           <img src="img/avatar_4.jpg" alt="avatar">
+         </div>
+         <div class="info">
+           <div class="nome">
+             <p class="strong">Wayne Static</p>
+           </div>
+           <div class="status">
+             <p>Ultimo accesso oggi alle 07:03</p>
+           </div>
+         </div>
+         <div class="icon">
+           <a href="#"><i class="fas fa-search"></i></a>
+           <a href="#"><i class="fas fa-paperclip"></i></a>
+           <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+         </div>
+       </div>
+       <div class="top pop hidden" data-contact="4">
+         <div class="avatar">
+           <img src="img/avatar_5.jpg" alt="avatar">
+         </div>
+         <div class="info">
+           <div class="nome">
+             <p class="strong">Roger Daltrey</p>
+           </div>
+           <div class="status">
+             <p>Ultimo accesso oggi alle 19:17</p>
+           </div>
+         </div>
+         <div class="icon">
+           <a href="#"><i class="fas fa-search"></i></a>
+           <a href="#"><i class="fas fa-paperclip"></i></a>
+           <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+         </div>
+       </div>
+       <div class="top pop hidden" data-contact="5">
+         <div class="avatar">
+           <img src="img/avatar_6.jpg" alt="avatar">
+         </div>
+         <div class="info">
+           <div class="nome">
+             <p class="strong">Jim Morrison</p>
+           </div>
+           <div class="status">
+             <p>Ultimo accesso oggi alle 12:25</p>
+           </div>
+         </div>
+         <div class="icon">
+           <a href="#"><i class="fas fa-search"></i></a>
+           <a href="#"><i class="fas fa-paperclip"></i></a>
+           <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+         </div>
+       </div>
+       <div class="top pop hidden" data-contact="6">
+         <div class="avatar">
+           <img src="img/avatar_7.jpg" alt="avatar">
+         </div>
+         <div class="info">
+           <div class="nome">
+             <p class="strong">Corey Taylor</p>
+           </div>
+           <div class="status">
+             <p>Ultimo accesso oggi alle 22:22</p>
+           </div>
+         </div>
+         <div class="icon">
+           <a href="#"><i class="fas fa-search"></i></a>
+           <a href="#"><i class="fas fa-paperclip"></i></a>
+           <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+         </div>
+       </div>
+       <div class="top pop hidden" data-contact="7">
+         <div class="avatar">
+           <img src="img/avatar_8.jpg" alt="avatar">
+         </div>
+         <div class="info">
+           <div class="nome">
+             <p class="strong">John Fogerty</p>
+           </div>
+           <div class="status">
+             <p>Ultimo accesso oggi alle 08:05</p>
            </div>
          </div>
          <div class="icon">
